--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,9 @@ openssl = { version = "0.10", features = ["vendored"] }
 aws-nitro-enclaves-cose = "0.1.0"
 webpki = "0.21.4"
 
+serde = { version = "1.0", default-features = false, features = ["derive"] }
+serde_cbor = { version = "0.11.1", default-features = false }
+serde_bytes = "0.11.5"
+serde_repr = "0.1.6"
 
+chrono = { version = "0.4.19", features = ["serde"] }
