--- a/c-lib/Cargo.toml
+++ b/c-lib/Cargo.toml
@@ -3,6 +3,7 @@ name = "c-lib"
 version = "0.1.0"
 authors = ["ppmag <mybestexpert@gmail.com>"]
 edition = "2018"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,3 +12,8 @@ name = "nitroattest"
 crate-type = ["cdylib", "staticlib"]   
 
 [dependencies]
+libc = "0.2.91"
+aws-nitro-enclaves-attestation = { path = "../" }
+
+[build-dependencies]
+cbindgen = "0.18.0"
