--- a/c-lib/Cargo.toml
+++ b/c-lib/Cargo.toml
@@ -17,3 +17,6 @@ aws-nitro-enclaves-attestation = { path = "../" }
 
 [build-dependencies]
 cbindgen = "0.18.0"
+
+[dev-dependencies]
+inline-c = "0.1.5"
