--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_cbor = { version = "0.11.1", default-features = false }
 serde_bytes = "0.11.5"
 serde_repr = "0.1.6"
+serde_json = "1.0.64"
 
 chrono = { version = "0.4.19", features = ["serde"] }
 hex = "0.4.3"
