--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,14 @@ openssl = { version = "0.10", features = ["vendored"] }
 aws-nitro-enclaves-cose = "0.1.0"
 webpki = "0.21.4"
 
+itertools = "0.10.0"
+
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_cbor = { version = "0.11.1", default-features = false }
 serde_bytes = "0.11.5"
 serde_repr = "0.1.6"
 serde_json = "1.0.64"
+serde_with = { version = "1.7.0", features = ["hex"] }
 
 chrono = { version = "0.4.19", features = ["serde"] }
 hex = "0.4.3"
