--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,9 @@ categories = ["development-tools::ffi", "hardware-support", "parser-implementati
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-openssl = { version = "0.10", features = ["vendored"] }
 aws-nitro-enclaves-cose = "0.1.0"
-webpki = "0.21.4"
 
-itertools = "0.10.0"
+itertools = "0.10.3"
 
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_cbor = { version = "0.11.1", default-features = false }
@@ -35,6 +33,14 @@ serde_repr = "0.1.6"
 serde_json = "1.0.64"
 serde_with = { version = "1.7.0", features = ["hex"] }
 
-chrono = { version = "0.4.19", features = ["serde"] }
+openssl = { version = "0.10", features = ["vendored"] }
+# chrono = { version="*", features = ["serde"] }
+chrono = { path="../chrono", features = ["serde"] }
 hex = "0.4.3"
 x509-parser = "0.9.1"
+
+[target.'cfg(not(target_arch = "wasm32" ))'.dependencies]
+webpki = "0.21.4"
+
+[features]
+openssl_native = []
