--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -18,7 +18,7 @@ build = "build.rs"
 
 [lib]
 name = "nitroattest"
-crate-type = ["rlib", "cdylib", "staticlib"]   
+crate-type = ["cdylib", "staticlib"]   
 
 [dependencies]
 libc = "0.2.91"
