--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,7 @@ serde_json = "1.0.64"
 serde_with = { version = "1.7.0", features = ["hex"] }
 
 openssl = { version = "0.10", features = ["vendored"] }
-# chrono = { version="*", features = ["serde"] }
-chrono = { path="../chrono", features = ["serde"] }
+chrono = { path="src/external/chrono", features = ["serde"] } # [TODO]: use rust crate from cargo instead of source code... But now it fails to build to wasm, even though the same version is beeing used
 hex = "0.4.3"
 x509-parser = "0.9.1"
 
