panic unwind mustn't throw an exception

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ default-members = [ ".", "ffi" ]
 
 [profile.release]
 lto = true
+panic = "abort"
 
 [package]
 name = "aws-nitro-enclaves-attestation"
